# farmos-mcp

./: .env.example  CLAUDE.md  LICENSE  README.md  farmos_client.py  pyproject.toml  server.py
tools/: assets.py  farm.py  logs.py  plans.py  quantities.py  terms.py  users.py
