[project]
name = "farmos-mcp"
version = "0.1.0"
description = "MCP server for farmOS — gives Claude access to your farm data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/rkioski/farmos-mcp"
Repository = "https://github.com/rkioski/farmos-mcp"

[project.scripts]
farmos-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
